# RICM4_Projet_SmartSelfService

./: .gitignore  DB_SSS  README.md
ESP8266/: ESP8266_SSS_cloud.ino
lockersApp/: CMakeLists.txt  MakeMongo  main.cpp  mongo-access.c  qrdecoder.cpp
web-app/: package.json
web-app/.meteor/: .id  packages  versions
web-app/client/: helpers.js  main.css  main.html  main.js
web-app/client/router/: admin.js  general.js  locker.js  object.js  user.js
web-app/imports/: welcome.html  welcome.js
web-app/imports/api/: lockers.js
web-app/imports/startup/: accounts-config.js
web-app/imports/ui/: addLocker.html  addLocker.js  connect.html  connect.js  deposit.html  deposit.js  dispLockers.js  home.html  home.js  login.html  menu.html  menu.js  register.js  search.html  search.js  unlock.html  unlock.js
web-app/imports/ui/admin/: users.html  users.js
web-app/imports/ui/locker/: addLocker.js  unlock.html  unlock.js
web-app/imports/ui/locker/admin/: addLocker.js  dispLockers.html  dispLockers.js
web-app/imports/ui/object/: bringback.html  bringback.js  deposit.html  deposit.js  dropoff.html  dropoff.js  own.html  own.js  takeoff.html  takeoff.js
web-app/imports/ui/user/: actions.html  actions.js  login.js  register.html  register.js
web-app/server/: main.js  register.js
